[package]
edition = "2021"
name = "ppaass-protocol"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {version = "1.5",  features = ["serde"]}
serde = "1.0"
serde_derive = "1.0"
bincode="1.3"
thiserror="1.0"
derive_more="0.99"
log = "0.4"
uuid={version="1.5", features = ["v4"]}

