[package]
edition = "2021"
name = "ppaass-protocol"
version = "0.1.5"
description = "The protocol of ppaass application"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
bincode = "1"
thiserror = "1"
derive_more = { version = "1", features = ["display", "constructor"] }
tracing = "0.1"

